# tii-quantum-mcp

./: .gitignore  README.md  pyproject.toml
src/tii_quantum_mcp/: __init__.py  client.py  server.py
tests/: test_server.py
