[project]
name = "tii-quantum-mcp"
version = "0.1.0"
description = "MCP server for submitting quantum circuits to the TII Q-Cloud system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.8.1",
    "tii-quantum>=0.1.1",
]

[[project.authors]]
name = "qiboteam"

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/qiboteam/tii-quantum-mcp"
Repository = "https://github.com/qiboteam/tii-quantum-mcp"

[project.scripts]
tii-quantum-mcp = "tii_quantum_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tii_quantum_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
